--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лаваш - Ресторан грузинской кухни</title>
+    <title>Лаваш</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="assets/general/logo.png" type="image/png">
 </head>
 <body>
     <!-- Header -->
@@ -35,7 +36,7 @@
         <div class="container">
             <div class="hero-section">
                 <div class="hero-content">
-                    <h1 class="hero-title">Добро пожаловать в Лаваш</h1>
+                    <h1 class="hero-title">Добро пожаловать в кафе Лаваш</h1>
                     <p class="hero-subtitle">Выберите филиал для продолжения</p>
                 </div>
                 <div class="hero-image">
