--- a/index.html
+++ b/index.html
@@ -225,6 +225,22 @@
     <!-- Success Overlay -->
     <div class="success-overlay" id="successOverlay"></div>
 
+    <!-- Mobile Bottom Menubar -->
+    <nav class="mobile-menubar" id="mobileMenubar">
+        <button class="menubar-btn" id="menubarBranchesBtn">
+            <i class="fas fa-store"></i>
+            <span>Филиалы</span>
+        </button>
+        <button class="menubar-btn" id="menubarCategoriesBtn">
+            <i class="fas fa-list"></i>
+            <span>Категории</span>
+        </button>
+        <button class="menubar-btn" id="menubarDeliveryBtn">
+            <i class="fas fa-truck"></i>
+            <span>Доставка</span>
+        </button>
+    </nav>
+
     <script src="script.js"></script>
 </body>
 </html>
