fix the hero section in the mobile version and make the image blur

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <div class="hero-content">
                     <h1 class="hero-title">Добро пожаловать в кафе Лаваш</h1>
                     <p class="hero-subtitle">Выберите филиал для продолжения</p>
+                    <p class="hero-subtitle">Ежедневно с 11:00 до 21:00 по будням, с 11:00 до 22:00 в выходные (пт-вск). Средняя время доставки 60-90 минут.</p>
                 </div>
                 <div class="hero-image">
                     <img src="assets/general/hero.jpg" alt="Грузинская кухня" class="hero-img">
